Updating Styling
